--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <li>Reception Makeup</li>
             <li>On-location service</li>
         </ul>
-        <a href="https://wa.me/91XXXXXXXXXX" class="btn small">Get Quote</a>
+        <a href="https://wa.me/+91 75698 26022" class="btn small">Get Quote</a>
     </div>
 </section>
 
@@ -139,7 +139,7 @@
     <h2>Book Your Appointment</h2>
     <p>Have questions or ready to book? Message us directly on WhatsApp.</p>
 
-    <a href="https://wa.me/91XXXXXXXXXX" target="_blank" class="btn">
+    <a href="https://wa.me/+91 75698 26022" target="_blank" class="btn">
         Chat on WhatsApp
     </a>
 </section>
